--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,55 @@
-Flask==1.1.2
+aiohttp==3.6.2
+astroid==2.4.2
+async-timeout==3.0.1
+attrs==19.3.0
+backoff==1.10.0
+certifi==2020.6.20
+chardet==3.0.4
+colorama==0.4.3
+cycler==0.10.0
+Cython==0.29.14
+dateutils==0.6.8
+dcom==0.0.7
+decorator==4.4.2
+discord.py==1.3.3
+ecdsa==0.15
 gunicorn==20.0.4
-keras==2.3.0
-numpy==1.16.5
-opencv-python==4.1.0.25
-tensorflow==1.14.0
+idna==2.10
+idna-ssl==1.1.0
+imageio==2.8.0
+isort==4.3.21
+kiwisolver==1.2.0
+lazy-object-proxy==1.4.3
+lightsteem==0.1.5
+matplotlib==3.2.1
+mccabe==0.6.1
+multidict==4.7.6
+networkx==2.4
+numpy==1.18.5
+Pillow==7.0.0
+plotly==4.8.2
+pydicom==2.0.0
+pylint==2.5.3
+pymongo==3.10.1
+pyparsing==2.4.7
+pytesseract==0.3.1
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+python-settings==0.2.2
+pytz==2020.1
+PyWavelets==1.1.1
+requests==2.24.0
+retrying==1.3.3
+scikit-image==0.17.2
+scipy==1.4.1
+simple-settings==0.19.1
+six==1.15.0
+tesseract==0.1.3
+tifffile==2020.6.3
+toml==0.10.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.2
+urllib3==1.25.9
+websockets==8.1
+wrapt==1.12.1
+yarl==1.4.2
