--- a/requirements.txt
+++ b/requirements.txt
@@ -53,3 +53,9 @@ urllib3==1.25.9
 websockets==8.1
 wrapt==1.12.1
 yarl==1.4.2
+Flask==1.1.2
+gunicorn==20.0.4
+keras==2.2.5
+numpy==1.16.5
+opencv-python==4.1.0.25
+tensorflow==1.14.0
